# retina-spectrum

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
.plans/: 002-phase2-dsp.md  003_retina-spectrum-dsp-fixes.md  004_mock-iq-generator.md  005_test-harness.md  006_focus-mode.md  007_radio-sweep.md  008_fm-peak-detection.md  009_band-tabs.md  010_fm-illuminator-quality.md  012_averaging.md  013_tv-channel-snr.md  phase-1.md
src/: channels.h  config.h  dsp.cpp  dsp.h  main.cpp  ring.h  sdr.cpp  sdr.h
tests/: test_dsp.cpp  test_ring.cpp
web/: index.html  wizard.html
